Mobile fix about except for video align

--- a/_sass/about.sass
+++ b/_sass/about.sass
@@ -27,6 +27,23 @@
 		p
 			margin-bottom: 10px
 			
+@media (max-width: 991px)
+	.about-content
+		h1
+		h2
+			text-align: center
+		h3
+			color: $black
+			font-weight: bold
+		h4
+			color: $black
+			font-weight: bold
+		a
+			text-align: center
+		img
+			margin-top: 15px
+			margin-bottom: 10px
+
 
 #kindWords
 	background-color: $white-sand
@@ -52,7 +69,8 @@
 
 
 .top-bio
-	margin-top: 40px
+	padding-top: 10px
+	margin-top: 30px
 	background-color: $dark-sand
 	
 .mid-bio
@@ -60,11 +78,19 @@
 
 .bottom-bio
 	background-color: $super-white-sand
-	margin-bottom: 60px
+	padding-bottom: 30px
+	margin-bottom: 30px
+
+#about-bottom-block
+	padding-top: 35px
 
 .bio
 	padding: 15px
 	padding-top: 25px
+
+@media (max-width: 991px)
+	.bio-mobile-header
+		margin-top: 25px
 
 .carousel-control-next-icon
 	width: 30px
